--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joseantonionuevo/ai-chat-widget",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "A ready-to-use, customizable chat widget for AI applications using Vercel AI SDK v6",
   "author": "Jose Antonio Nuevo",
   "license": "MIT",
@@ -55,13 +55,15 @@
     "dev": "tsup --watch",
     "lint": "eslint . --fix",
     "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "prepublishOnly": "pnpm build"
   },
   "peerDependencies": {
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
     "@ai-sdk/react": ">=3.0.0",
-    "ai": ">=6.0.0"
+    "ai": ">=6.0.0",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "peerDependenciesMeta": {
     "react-markdown": {
@@ -74,17 +76,21 @@
   "devDependencies": {
     "@ai-sdk/react": "^3.0.64",
     "@eslint/js": "^9.39.2",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^22.19.7",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "ai": "^6.0.62",
     "eslint": "^9.39.2",
+    "jsdom": "^27.4.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.54.0",
+    "vitest": "^4.0.18"
   }
 }
